7902783: Static instrumentation fails with Java 9 and above if multiple inputs are used